Create javascript api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
 <h1>New Yorker Pull Request Notifier</h1>
 
+<audio id="multiaudio1" src="audio/piano_chord.wav" preload="auto"></audio>
+
 <%= yield %>
 
 </body>
