--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 
 <h1>New Yorker Pull Request Notifier</h1>
 
-<audio id="multiaudio1" src="audio/piano_chord.wav" preload="auto"></audio>
+<audio id="multiaudio1" src="audio/clay.mp3" preload="auto"></audio>
+<audio id="multiaudio2" src="audio/dotted-spiral.mp3" preload="auto"></audio>
+<audio id="multiaudio3" src="audio/glimmer.mp3" preload="auto"></audio>
+<audio id="multiaudio4" src="audio/splits.mp3" preload="auto"></audio>
+<audio id="multiaudio5" src="audio/strike.mp3" preload="auto"></audio>
 
 <%= yield %>
 
