Create condition for the sounds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
 
 <h1>New Yorker Pull Request Notifier</h1>
 
-<audio id="multiaudio1" src="audio/strike.mp3" preload="auto"></audio>
-<audio id="multiaudio2" src="audio/dotted-spiral.mp3" preload="auto"></audio>
-<audio id="multiaudio3" src="audio/glimmer.mp3" preload="auto"></audio>
-<audio id="multiaudio4" src="audio/clay.mp3" preload="auto"></audio>
-<audio id="multiaudio5" src="audio/splits.mp3" preload="auto"></audio>
+<audio id="push-sound" src="audio/dotted-spiral.mp3" preload="auto"></audio>
+<audio id="comment-sound" src="audio/glimmer.mp3" preload="auto"></audio>
+<audio id="pull-request-sound" src="audio/clay.mp3" preload="auto"></audio>
+<audio id="release-sound" src="audio/clay.mp3" preload="auto"></audio>
+<audio id="branch-sound" src="audio/clay.mp3" preload="auto"></audio>
+<audio id="default-sound" src="audio/splits.mp3" preload="auto"></audio>
 
 <%= yield %>
 
