--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nypullrequest</title>
+  <title>New Yorker Github Sound Notifier</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1>New Yorker Pull Request Notifier</h1>
+<h1>New Yorker Github Sound Notifier</h1>
 
 <a href="#" class="button interval-button">Start Interval</a>
 
