--- a/app/views/listen/home.html
+++ b/app/views/listen/home.html
@@ -2,9 +2,9 @@
 
 <a href="#" class="button interval-button">Start Interval</a>
 
-<audio id="push-sound" src="audio/dotted-spiral.mp3" preload="auto"></audio>
+<audio id="push-sound" src="audio/Magnet.wav" preload="auto"></audio>
 <audio id="default-sound" src="audio/glimmer.mp3" preload="auto"></audio>
 <audio id="pull-request-sound" src="audio/clay.mp3" preload="auto"></audio>
-<audio id="release-sound" src="audio/Magnet.wav" preload="auto"></audio>
+<audio id="release-sound" src="audio/dotted-spiral.mp3" preload="auto"></audio>
 <audio id="branch-sound" src="audio/strike.mp3" preload="auto"></audio>
 <audio id="comment-sound" src="audio/splits.mp3" preload="auto"></audio>
